--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">thinker</string>
+    <string name="app_name">TinkerDemo</string>
+    <string name="load_path">Load Path</string>
+    <string name="clear_path">Clear Path</string>
+    <string name="toast">Toast</string>
+    <string name="show_info">show info</string>
 </resources>
